--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root{
+    --n : 2
+}
 *{
     box-sizing: border-box;
     display: block;
@@ -7,11 +10,11 @@
 }
 .game {
     position: relative;
-    height: 60vh;
-    width: 60vh;
+    height: 500px;
+    width: 500px;
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr 5fr 1fr;
-    grid-template-rows: 1fr 5fr 1fr 5fr 1fr;
+    grid-template-columns: repeat(var(--n), 1fr 5fr) 1fr;
+    grid-template-rows: repeat(var(--n), 1fr 5fr) 1fr;
 }
 .border, .cross {
     background-color: black;
