--- a/public/style.css
+++ b/public/style.css
@@ -60,3 +60,10 @@
     width: 2rem;
     height: 2rem;
 }
+.player-playing{
+    position: fixed;
+    right: 2;
+    top: 2;
+    width: 2rem;
+    height: 2rem;
+}
