--- a/public/menu-style.css
+++ b/public/menu-style.css
@@ -40,7 +40,8 @@ body{
     }
 }
 .title-container{
-    margin-bottom: 20vh;
+    margin-bottom: 12.5vh;
+    margin-top: 12.5vh;
     font-size: var(--big-size);
     text-align: center;
     position: relative;
@@ -48,19 +49,18 @@ body{
 h1.main-title{
     font-size :var(--enormous-size);
     font-family: 'Montserrat Alternates', sans-serif;
+}
+h1.main-title.red{
     position: absolute;
     top: 0;
     left: 50%;
-    
-}
-h1.main-title.red{
     color: var(--red-accent);
     translate: calc(-50% + var(--x-offset)) var(--y-offset);
     animation: eloigne 2s ease-in-out forwards;
 }
 h1.main-title.blue{
+    position: relative;
     color: var(--blue-accent);
-    translate: -50% 0;
 }
 
 
@@ -73,7 +73,7 @@ h1.main-title.blue{
     max-width: 800px;
     left: 50%;
     translate: -50%;
-    row-gap: 1rem;
+    row-gap: 2rem;
 }
 .container > section {
     justify-self: stretch;
@@ -103,7 +103,6 @@ h1.main-title.blue{
 .create{
     display: flex;
     flex-direction: column;
-
     align-items: center;
 }
 
@@ -111,6 +110,7 @@ h1.main-title.blue{
     width: 100%;
     text-align: center;
     font-size: var(--big-size);
+    margin-bottom: 2rem;
 }
 .settings{
     width: 100%;
@@ -129,6 +129,7 @@ h1.main-title.blue{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: var(--small-size);
 }
 .create-game, .enter-game{
     
