Form to join game ( enter will submit) Rework un peu du code

--- a/public/menu-style.css
+++ b/public/menu-style.css
@@ -78,6 +78,9 @@ h1.main-title.blue{
 .container > section {
     justify-self: stretch;
 }
+.join-form{
+    display: contents;
+}
 .join {
     display: flex;
     flex-direction: row;
