--- a/public/menu-style2.css
+++ b/public/menu-style2.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Despairs-Trial', sans-serif;
     font-weight: 900;
     --enormous-size : 8rem;
     --big-size : 2.2rem;
@@ -26,20 +25,72 @@ body{
     background-image: var(--bg-image);
 }
 
+h1 span{
+    display: inline-block;
+    position: relative;
+    overflow: hidden; 
+    position: relative; 
+}
+
+h1{
+    text-transform: uppercase;  
+    font-weight: 900;
+    color: transparent;
+    font-family: 'Despairs-Trial'; 
+    overflow: hidden;
+}
+
+h1 span::after{
+    content: "";
+    display: block;
+    /*meme position que l'élément que yavait avant*/
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+}
+
+h1:nth-child(1) {
+    animation: txt-appearance 0s 0.75s forwards;
+}
+/*mon bloc slide in et slide out*/
+h1:nth-child(1) span::after {
+    background: var(--red-accent);
+    animation: slide-in 0.5s ease-out forwards,
+    slide-out 0.5s 0.75s ease-out forwards;
+}
+
+/*on passe de -100 à 0 à 100%*/
+@keyframes slide-in {
+    100% {
+        transform: translateX(0%);
+    }
+}
+@keyframes slide-out {
+    100% {
+        transform: translateX(100%)
+    }
+}
+@keyframes txt-appearance {
+    100% {
+    }
+}
 
 
 .title-container{
-    margin-bottom: 12.5vh;
-    margin-top: 12.5vh;
+    margin-bottom: -2vh;
+    margin-top: 2vh;
     font-size: var(--big-size);
     text-align: center;
-    position: relative;
+;
 }
 
 @font-face {
     font-family:'Despairs-Trial' ;
-    src: url(public/Despairs\ Trial.woff) format('woff'),
-         url(public/Despairs\ Trial.woff2) format('woff2')
+    src: url(Despairs\ Trial.woff) format('woff'),
+         url(Despairs\ Trial.woff2) format('woff2')
 }
 
 .container {
@@ -51,20 +102,25 @@ body{
     max-width: 800px;
     left: 50%;
     translate: -50%;
-    row-gap: 2rem;
+    row-gap: 2vw;
+    font-family: sans-serif;
 }
+
 .container > section {
     justify-self: stretch;
 }
+
 .form{
     display: contents;
 }
+
 .join {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
+
 .join-input {
     width: 86%;
     font-size: var(--big-size);
